--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     </footer>
 
     <!-- modal -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
