--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
-          <a class="logo" href="/index.html"
+          <a class="logo header-logo" href="/index.html"
             >Web<span class="studio">Studio</span>
           </a>
           <ul class="nav-list">
@@ -48,8 +48,77 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="open-menu-btn">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-group"></use>
+          </svg>
+        </button>
       </div>
     </header>
+
+    <!-- menu -->
+    <div class="backdrop">
+      <div class="menu">
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="menu-list">
+          <li>
+            <a class="menu-item menu-current" href="./index.html">Studio</a>
+          </li>
+          <li><a class="menu-item" href="">Portfolio</a></li>
+          <li><a class="menu-item" href="">Contacts</a></li>
+        </ul>
+        <address class="menu-address">
+          <ul class="menu-addr-list">
+            <li>
+              <a
+                class="menu-addr-item menu-addr-current"
+                href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a class="menu-addr-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="menu-list-icon">
+          <li class="menu-item-icon">
+            <a href="" class="menu-link-icon">
+              <svg class="menu-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-item-icon">
+            <a href="" class="menu-link-icon">
+              <svg class="menu-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-item-icon">
+            <a href="" class="menu-link-icon">
+              <svg class="menu-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="menu-item-icon">
+            <a href="" class="menu-link-icon">
+              <svg class="menu-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <!-- main -->
     <main>
@@ -118,7 +187,7 @@
         </div>
       </section>
 
-      <!-- our-team -->
+      <!-- <our-team -->
       <section class="our-team">
         <div class="container">
           <h2 class="our-team-title">Our Team</h2>
@@ -126,7 +195,11 @@
             <li class="our-team-item">
               <img
                 class="our-team-img"
-                src="./images/photo1.1.jpg"
+                srcset="
+                  ./images/desktop/photo1.1.jpg    1x,
+                  ./images/desktop/photo-d1.2x.jpg 2x
+                "
+                src="./images/dekstop/photo1.1.jpg"
                 width="264"
                 alt="photo Mark Guerrero"
               />
@@ -169,7 +242,11 @@
             <li class="our-team-item">
               <img
                 class="our-team-img"
-                src="./images/photo2.1.jpg"
+                srcset="
+                  ./images/desktop/photo2.1.jpg    1x,
+                  ./images/desktop/photo-d2.2x.jpg 2x
+                "
+                src="./images/desktop/photo2.1.jpg"
                 width="264"
                 alt="photo Tom Ford"
               />
@@ -212,7 +289,11 @@
             <li class="our-team-item">
               <img
                 class="our-team-img"
-                src="./images/photo3.1.jpg"
+                srcset="
+                  ./images/desktop/photo3.1.jpg    1x,
+                  ./images/desktop/photo-d3.2x.jpg 2x
+                "
+                src="./images/desktop/photo3.1.jpg"
                 width="264"
                 alt="photo Camilla Garcia"
               />
@@ -255,7 +336,11 @@
             <li class="our-team-item">
               <img
                 class="our-team-img"
-                src="./images/photo4.1.jpg"
+                srcset="
+                  ./images/desktop/photo4.1.jpg    1x,
+                  ./images/desktop/photo-d4.2x.jpg 2x
+                "
+                src="./images/desktop/photo4.1.jpg"
                 width="264"
                 alt="photo Daniel Wilson"
               />
@@ -305,12 +390,35 @@
           <ul class="port-list">
             <li class="port-item">
               <div class="port-item-img">
-                <img
-                  class="port-img"
-                  src="./images/img11.jpg"
-                  width="360"
-                  alt="banking app"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop/img11.jpg     1x,
+                      ./images/desktop/img-d1.2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/img1.1x.jpg 1x,
+                      ./images/tablet/img1.2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/img-m1.1x.jpg 1x,
+                      ./images/mobile/img-m1.2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="port-img"
+                    src="./images/desktop/img11.jpg"
+                    width="360"
+                    alt="banking app"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -325,12 +433,35 @@
 
             <li class="port-item">
               <div class="port-item-img">
-                <img
-                  class="port-img"
-                  src="./images/img21.jpg"
-                  width="360"
-                  alt="marketing"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop/img21.jpg     1x,
+                      ./images/desktop/img-d2.2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/img2.1x.jpg 1x,
+                      ./images/tablet/img2.2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/img-m2.1x.jpg 1x,
+                      ./images/mobile/img-m2.2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="port-img"
+                    src="./images/desktop/img21.jpg"
+                    width="360"
+                    alt="marketing"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -345,12 +476,35 @@
 
             <li class="port-item">
               <div class="port-item-img">
-                <img
-                  class="port-img"
-                  src="./images/img31.jpg"
-                  width="360"
-                  alt="app"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop/img31.jpg     1x,
+                      ./images/desktop/img-d3.2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/img3.1x.jpg 1x,
+                      ./images/tablet/img3.2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/img-m3.1x.jpg 1x,
+                      ./images/mobile/img-m3.2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="port-img"
+                    src="./images/desktop/img31.jpg"
+                    width="360"
+                    alt="app"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -365,12 +519,35 @@
 
             <li class="port-item">
               <div class="port-item-img">
-                <img
-                  class="port-img"
-                  src="./images/img41.jpg"
-                  width="360"
-                  alt="taxi"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop/img41.jpg     1x,
+                      ./images/desktop/img-d4.2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/img4.1x.jpg 1x,
+                      ./images/tablet/img4.2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/img-m4.1x.jpg 1x,
+                      ./images/mobile/img-m4.2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="port-img"
+                    src="./images/desktop/img41.jpg"
+                    width="360"
+                    alt="taxi"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -385,12 +562,35 @@
 
             <li class="port-item">
               <div class="port-item-img">
-                <img
-                  class="port-img"
-                  src="./images/img51.jpg"
-                  width="360"
-                  alt=" illustrations"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop/img51.jpg     1x,
+                      ./images/desktop/img-d5.2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/img5.1x.jpg 1x,
+                      ./images/tablet/img5.2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/img-m5.1x.jpg 1x,
+                      ./images/mobile/img-m5.2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="port-img"
+                    src="./images/desktop/img51.jpg"
+                    width="360"
+                    alt="illustrations"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -405,12 +605,35 @@
 
             <li class="port-item">
               <div class="port-item-img">
-                <img
-                  class="port-img"
-                  src="./images/img61.jpg"
-                  width="360"
-                  alt="joy"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desktop/img61.jpg     1x,
+                      ./images/desktop/img-d6.2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tablet/img6.1x.jpg 1x,
+                      ./images/tablet/img6.2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mobile/img-m6.1x.jpg 1x,
+                      ./images/mobile/img-m6.2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    class="port-img"
+                    src="./images/desktop/img61.jpg"
+                    width="360"
+                    alt="marketing"
+                  />
+                </picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -430,47 +653,49 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-logo-text">
-          <a class="logo footer-logo" href="./index.html"
-            >Web<span class="footer-studio">Studio</span>
-          </a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-media">
-          <p class="footer-aside">Social media</p>
-          <ul class="footer-list-icon">
-            <li class="footer-item-icon">
-              <a class="footer-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-item-icon">
-              <a class="footer-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-item-icon">
-              <a class="footer-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-item-icon">
-              <a class="footer-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-logo-media">
+          <div class="footer-logo-text">
+            <a class="logo footer-logo" href="./index.html"
+              >Web<span class="footer-studio">Studio</span>
+            </a>
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-media">
+            <p class="footer-aside">Social media</p>
+            <ul class="footer-list-icon">
+              <li class="footer-item-icon">
+                <a class="footer-link" href="">
+                  <svg class="footer-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item-icon">
+                <a class="footer-link" href="">
+                  <svg class="footer-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item-icon">
+                <a class="footer-link" href="">
+                  <svg class="footer-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-item-icon">
+                <a class="footer-link" href="">
+                  <svg class="footer-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer-subscribe">
           <p class="footer-subs-text">Subscribe</p>
@@ -543,12 +768,12 @@
           </div>
           <div class="modal-box-comment">
             <label for="user-comment" class="modal-label">Comment</label>
-              <textarea
-                id="user-comment"
-                class="modal-comment"
-                name="user-comment"
-                placeholder="Text input"
-              ></textarea>
+            <textarea
+              id="user-comment"
+              class="modal-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="modal-field">
             <input
@@ -559,14 +784,18 @@
               value="true"
             />
             <label for="user-privacy" class="check-text">
-            <span class="box-check-icon">
+              <span class="box-check-icon">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
-                </svg> 
+                </svg>
               </span>
-              I accept the terms and conditions of the<a href="" class="check-link">
-              Privacy Policy</a>
-              </label>
+              I accept the terms and conditions of the<a
+                href=""
+                class="check-link"
+              >
+                Privacy Policy</a
+              >
+            </label>
           </div>
           <button class="form-button" type="submit">Send</button>
         </form>
