--- a/index.html
+++ b/index.html
@@ -58,19 +58,21 @@
 
     <!-- menu -->
     <div class="backdrop">
-      <div class="menu">
+      <div class="container menu">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <ul class="menu-list">
-          <li>
-            <a class="menu-item menu-current" href="./index.html">Studio</a>
-          </li>
-          <li><a class="menu-item" href="">Portfolio</a></li>
-          <li><a class="menu-item" href="">Contacts</a></li>
-        </ul>
+        <nav class="menu-nav">
+          <ul class="menu-list">
+            <li>
+              <a class="menu-item menu-current" href="./index.html">Studio</a>
+            </li>
+            <li><a class="menu-item" href="">Portfolio</a></li>
+            <li><a class="menu-item" href="">Contacts</a></li>
+          </ul>
+        </nav>
         <address class="menu-address">
           <ul class="menu-addr-list">
             <li>
@@ -90,28 +92,28 @@
         <ul class="menu-list-icon">
           <li class="menu-item-icon">
             <a href="" class="menu-link-icon">
-              <svg class="menu-icon" width="16" height="16">
+              <svg class="menu-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="menu-item-icon">
             <a href="" class="menu-link-icon">
-              <svg class="menu-icon" width="16" height="16">
+              <svg class="menu-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="menu-item-icon">
             <a href="" class="menu-link-icon">
-              <svg class="menu-icon" width="16" height="16">
+              <svg class="menu-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="menu-item-icon">
             <a href="" class="menu-link-icon">
-              <svg class="menu-icon" width="16" height="16">
+              <svg class="menu-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -720,7 +722,7 @@
     </footer>
 
     <!-- modal -->
-    <div class="backdrop">
+    <div class="backdrop modal-backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -789,12 +791,14 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the<a
-                href=""
-                class="check-link"
-              >
-                Privacy Policy</a
-              >
+              <span>
+                I accept the terms and conditions of the<a
+                  href=""
+                  class="check-link"
+                >
+                  Privacy Policy</a
+                >
+              </span>
             </label>
           </div>
           <button class="form-button" type="submit">Send</button>
